fdg: fix label overlapping with circle

--- a/public_html/style.css
+++ b/public_html/style.css
@@ -357,3 +357,8 @@ select {
 .float-left {
   float: left;
 }
+
+svg .center {
+  display: block;
+  text-align: center;
+}
